# CSVParser

./: CMakeLists.txt
Tests/: CMakeLists.txt  Simple.csv  Test.cpp  Test.hpp  main.cpp
Tests/Input/: Hard.csv  Incorrect1.csv  Incorrect2.csv  StandartSalesJan2009.csv
src/: CMakeLists.txt  CSVParser.hpp  CSVParser_template.hpp
